--- a/index.html
+++ b/index.html
@@ -2,15 +2,37 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Corrida com Obstáculos</title>
+
+    <!-- Link para o arquivo CSS -->
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Fallback para caso o JavaScript esteja desativado -->
+    <noscript>
+        <style>
+            body { 
+                display: flex; 
+                justify-content: center; 
+                align-items: center; 
+                height: 100vh; 
+                font-family: Arial, sans-serif; 
+                background-color: #1E1E1E; 
+                color: white; 
+                text-align: center;
+            }
+        </style>
+        <div>
+            <h1>Corrida com Obstáculos</h1>
+            <p>Este jogo requer JavaScript para ser executado. Por favor, ative o JavaScript no seu navegador.</p>
+        </div>
+    </noscript>
 </head>
 <body>
     <!-- Canvas onde o jogo será renderizado -->
     <canvas id="gameCanvas"></canvas>
 
-    <!-- Liga o arquivo JavaScript -->
-    <script src="game.js"></script>
+    <!-- Inclui o arquivo JavaScript no final para melhor desempenho -->
+    <script src="game.js" defer></script>
 </body>
 </html>
