--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Link para o arquivo CSS -->
     <link rel="stylesheet" href="styles.css">
 
-    <!-- Fallback para caso o JavaScript esteja desativado -->
+    <!-- Fallback para JavaScript desativado -->
     <noscript>
         <style>
             body { 
